Logger and user registration logic updated
